--- a/profs.ui
+++ b/profs.ui
@@ -107,7 +107,7 @@
 </string>
        </property>
        <property name="text">
-        <string>задачи на переливание</string>
+        <string>быстрый счет</string>
        </property>
        <attribute name="buttonGroup">
         <string notr="true">prof_buttons</string>
@@ -163,7 +163,7 @@ QPushbutton:pressed {
 }</string>
        </property>
        <property name="text">
-        <string>устный счет</string>
+        <string>переливания</string>
        </property>
        <attribute name="buttonGroup">
         <string notr="true">prof_buttons</string>
