--- a/results.ui
+++ b/results.ui
@@ -6,26 +6,26 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>581</width>
-    <height>287</height>
+    <width>887</width>
+    <height>458</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+   <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
   <property name="minimumSize">
    <size>
-    <width>581</width>
-    <height>287</height>
+    <width>887</width>
+    <height>458</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>581</width>
-    <height>287</height>
+    <width>887</width>
+    <height>458</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -38,8 +38,8 @@
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>140</x>
-      <y>10</y>
+      <x>300</x>
+      <y>0</y>
       <width>401</width>
       <height>71</height>
      </rect>
@@ -63,9 +63,9 @@
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>90</y>
-      <width>541</width>
-      <height>51</height>
+      <y>60</y>
+      <width>851</width>
+      <height>151</height>
      </rect>
     </property>
     <property name="font">
@@ -87,8 +87,8 @@
    <widget class="QPushButton" name="btn_mainr">
     <property name="geometry">
      <rect>
-      <x>230</x>
-      <y>190</y>
+      <x>400</x>
+      <y>400</y>
       <width>111</width>
       <height>41</height>
      </rect>
