--- a/possibilities.ui
+++ b/possibilities.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>MainWindow</class>
  <widget class="QMainWindow" name="MainWindow">
+  <property name="enabled">
+   <bool>true</bool>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -39,7 +42,7 @@
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>310</y>
+      <y>170</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -60,14 +63,14 @@
 </string>
     </property>
     <property name="text">
-     <string>ПРОЙТИ ТЕСТИРОВАНИЕ</string>
+     <string>ПРОЙТИ ПРОБНОЕ ТЕСТИРОВАНИЕ</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="btn_prof">
+   <widget class="QPushButton" name="btn_themes">
     <property name="geometry">
      <rect>
       <x>120</x>
-      <y>400</y>
+      <y>240</y>
       <width>211</width>
       <height>41</height>
      </rect>
@@ -95,60 +98,37 @@ QPushbutton:pressed {
      <string>ВЫБРАТЬ ТЕМУ ТЕСТА</string>
     </property>
    </widget>
-   <widget class="QWidget" name="verticalLayoutWidget">
+   <widget class="QPushButton" name="btn_theory">
     <property name="geometry">
      <rect>
-      <x>0</x>
-      <y>60</y>
-      <width>1691</width>
-      <height>141</height>
+      <x>120</x>
+      <y>310</y>
+      <width>211</width>
+      <height>41</height>
      </rect>
     </property>
-    <layout class="QVBoxLayout" name="verticalLayout">
-     <item>
-      <widget class="QLabel" name="label">
-       <property name="enabled">
-        <bool>true</bool>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="text">
-        <string>иногда бывает очень трудно самому подготовиться к различным олимпиадам, </string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_2">
-       <property name="styleSheet">
-        <string notr="true">color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="text">
-        <string> именно для этого и создан данный тренажер, помогающий в подготовке к ним.</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_3">
-       <property name="styleSheet">
-        <string notr="true">color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="text">
-        <string> на данном этапе вы можете пройти тестирование, которое определит, какая из</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_4">
-       <property name="styleSheet">
-        <string notr="true">color: rgb(255, 255, 255);</string>
-       </property>
-       <property name="text">
-        <string> предложенных тем для вас наиболее трудна или выбрать тему и решать задачи по ней</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">QPushButton {
+	background-color: rgb(145, 182, 182);
+	color: white;
+	border-width: 2px;
+	border-radius: 15px;
+}
+
+QPushbutton:pressed {
+	background-color: white
+
+}</string>
+    </property>
+    <property name="text">
+     <string>ИЗУЧИТЬ ТЕОРИЮ</string>
+    </property>
    </widget>
   </widget>
  </widget>
