--- a/results.ui
+++ b/results.ui
@@ -65,7 +65,7 @@
       <x>20</x>
       <y>60</y>
       <width>851</width>
-      <height>151</height>
+      <height>331</height>
      </rect>
     </property>
     <property name="font">
@@ -81,7 +81,7 @@
      <string notr="true">color: rgb(255, 255, 255);</string>
     </property>
     <property name="text">
-     <string>у вас проблемы с данной темой:</string>
+     <string/>
     </property>
    </widget>
    <widget class="QPushButton" name="btn_mainr">
