--- a/theory.ui
+++ b/theory.ui
@@ -5,6 +5,14 @@
   <property name="enabled">
    <bool>true</bool>
   </property>
+  <property name="geometry">
+   <rect>
+    <x>0</x>
+    <y>0</y>
+    <width>450</width>
+    <height>550</height>
+   </rect>
+  </property>
   <property name="sizePolicy">
    <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
     <horstretch>0</horstretch>
@@ -61,7 +69,7 @@
 background-color: rgb(237, 255, 248);</string>
       </property>
       <property name="text">
-       <string>К МЕНЮ</string>
+       <string>на главную</string>
       </property>
      </widget>
     </item>
