--- a/profs.ui
+++ b/profs.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,41 +18,42 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>610</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>610</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(119, 161, 161);</string>
+   <string notr="true">background-color:#f4fcff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>190</x>
-      <y>0</y>
+      <x>130</x>
+      <y>-10</y>
       <width>221</width>
       <height>61</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>16</pointsize>
+      <family>Segoe UI</family>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>ДОСТУПНЫЕ ТЕМЫ:</string>
@@ -61,17 +62,26 @@
    <widget class="QPushButton" name="btn_mainp">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>560</y>
+      <x>110</x>
+      <y>500</y>
       <width>231</width>
-      <height>31</height>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#dbc8dd;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
@@ -86,11 +96,17 @@ QPushbutton:pressed {
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>100</x>
-      <y>50</y>
+      <x>30</x>
+      <y>40</y>
       <width>391</width>
-      <height>501</height>
+      <height>435</height>
      </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>435</width>
+      <height>435</height>
+     </size>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -101,7 +117,7 @@ QPushbutton:pressed {
        <x>0</x>
        <y>0</y>
        <width>389</width>
-       <height>499</height>
+       <height>433</height>
       </rect>
      </property>
     </widget>
