--- a/results.ui
+++ b/results.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>887</width>
-    <height>458</height>
+    <width>449</width>
+    <height>577</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -18,42 +18,42 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>887</width>
-    <height>458</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>887</width>
-    <height>458</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(119, 161, 161);</string>
+   <string notr="true">background-color:#f4fcff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>300</x>
-      <y>0</y>
+      <x>90</x>
+      <y>10</y>
       <width>401</width>
       <height>71</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <family>MS Sans Serif</family>
-      <pointsize>15</pointsize>
+      <family>Segoe UI</family>
+      <pointsize>14</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>РЕЗУЛЬТАТЫ ТЕСТИРОВАНИЯ</string>
@@ -62,11 +62,17 @@
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>60</y>
-      <width>851</width>
+      <x>10</x>
+      <y>120</y>
+      <width>430</width>
       <height>331</height>
      </rect>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>430</width>
+      <height>560</height>
+     </size>
     </property>
     <property name="font">
      <font>
@@ -87,17 +93,38 @@
    <widget class="QPushButton" name="btn_mainr">
     <property name="geometry">
      <rect>
-      <x>400</x>
-      <y>400</y>
-      <width>111</width>
-      <height>41</height>
+      <x>130</x>
+      <y>490</y>
+      <width>181</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#f2c44f;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
