--- a/themed_test_answers.ui
+++ b/themed_test_answers.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>529</width>
-    <height>513</height>
+    <width>449</width>
+    <height>577</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -16,37 +16,56 @@
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>449</width>
+    <height>577</height>
+   </size>
+  </property>
   <property name="maximumSize">
    <size>
-    <width>529</width>
-    <height>513</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(119, 161, 161);</string>
+   <string notr="true">background-color:#f4fcff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>10</y>
+      <x>20</x>
+      <y>30</y>
       <width>521</width>
       <height>51</height>
      </rect>
     </property>
+    <property name="minimumSize">
+     <size>
+      <width>521</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>521</width>
+      <height>51</height>
+     </size>
+    </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <family>Segoe UI</family>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
+     <string notr="true">color: rgb(0, 0, 0);</string>
     </property>
     <property name="text">
      <string>ответы и решения</string>
@@ -55,17 +74,36 @@
    <widget class="QPushButton" name="btn_return">
     <property name="geometry">
      <rect>
-      <x>210</x>
-      <y>450</y>
-      <width>111</width>
-      <height>41</height>
+      <x>140</x>
+      <y>500</y>
+      <width>181</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#dd989c;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
@@ -80,11 +118,23 @@ QPushbutton:pressed {
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>50</y>
-      <width>461</width>
+      <x>10</x>
+      <y>90</y>
+      <width>435</width>
       <height>381</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>435</width>
+      <height>570</height>
+     </size>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -94,7 +144,7 @@ QPushbutton:pressed {
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>459</width>
+       <width>433</width>
        <height>379</height>
       </rect>
      </property>
