--- a/themed_tests.ui
+++ b/themed_tests.ui
@@ -6,47 +6,54 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>529</width>
-    <height>513</height>
+    <width>449</width>
+    <height>577</height>
    </rect>
   </property>
   <property name="sizePolicy">
-   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-    <horstretch>10</horstretch>
+   <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+    <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>449</width>
+    <height>577</height>
+   </size>
+  </property>
   <property name="maximumSize">
    <size>
-    <width>529</width>
-    <height>513</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(119, 161, 161);</string>
+   <string notr="true">background-color:#f4fcff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <widget class="QLabel" name="label">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>10</y>
+      <x>10</x>
+      <y>0</y>
       <width>521</width>
       <height>51</height>
      </rect>
     </property>
     <property name="font">
      <font>
-      <pointsize>11</pointsize>
-      <weight>50</weight>
-      <bold>false</bold>
+      <family>Segoe UI Black</family>
+      <pointsize>14</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
      </font>
     </property>
     <property name="styleSheet">
-     <string notr="true">color: rgb(255, 255, 255);</string>
+     <string notr="true">color: rgb(0,0, 0);</string>
     </property>
     <property name="text">
      <string>тренажер на тему:</string>
@@ -55,17 +62,44 @@
    <widget class="QPushButton" name="btn_return">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>450</y>
-      <width>111</width>
-      <height>41</height>
+      <x>240</x>
+      <y>510</y>
+      <width>181</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <horstretch>181</horstretch>
+      <verstretch>51</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#dbc8dd;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
@@ -80,11 +114,29 @@ QPushbutton:pressed {
    <widget class="QScrollArea" name="scrollArea">
     <property name="geometry">
      <rect>
-      <x>30</x>
+      <x>10</x>
       <y>50</y>
-      <width>461</width>
-      <height>381</height>
+      <width>435</width>
+      <height>435</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
+      <horstretch>0</horstretch>
+      <verstretch>0</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>435</width>
+      <height>435</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>435</width>
+      <height>435</height>
+     </size>
     </property>
     <property name="widgetResizable">
      <bool>true</bool>
@@ -94,8 +146,8 @@ QPushbutton:pressed {
       <rect>
        <x>0</x>
        <y>0</y>
-       <width>459</width>
-       <height>379</height>
+       <width>433</width>
+       <height>433</height>
       </rect>
      </property>
     </widget>
@@ -103,17 +155,44 @@ QPushbutton:pressed {
    <widget class="QPushButton" name="btn_answ">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>450</y>
-      <width>111</width>
-      <height>41</height>
+      <x>20</x>
+      <y>510</y>
+      <width>181</width>
+      <height>51</height>
      </rect>
+    </property>
+    <property name="sizePolicy">
+     <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+      <horstretch>181</horstretch>
+      <verstretch>51</verstretch>
+     </sizepolicy>
+    </property>
+    <property name="minimumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="maximumSize">
+     <size>
+      <width>181</width>
+      <height>51</height>
+     </size>
+    </property>
+    <property name="font">
+     <font>
+      <family>Segoe UI</family>
+      <pointsize>10</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
     </property>
     <property name="styleSheet">
      <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#bac2da;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
