--- a/theory.ui
+++ b/theory.ui
@@ -9,8 +9,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -21,26 +21,44 @@
   </property>
   <property name="minimumSize">
    <size>
-    <width>500</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
-    <width>500</width>
-    <height>600</height>
+    <width>449</width>
+    <height>577</height>
    </size>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(119, 161, 161);</string>
+   <string notr="true">background-color:#f4fcff;</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout_2">
     <item>
      <widget class="QScrollArea" name="scrollArea">
+      <property name="sizePolicy">
+       <sizepolicy hsizetype="Maximum" vsizetype="Maximum">
+        <horstretch>0</horstretch>
+        <verstretch>0</verstretch>
+       </sizepolicy>
+      </property>
+      <property name="minimumSize">
+       <size>
+        <width>435</width>
+        <height>500</height>
+       </size>
+      </property>
+      <property name="maximumSize">
+       <size>
+        <width>435</width>
+        <height>500</height>
+       </size>
+      </property>
       <property name="widgetResizable">
        <bool>true</bool>
       </property>
@@ -49,8 +67,8 @@
         <rect>
          <x>0</x>
          <y>0</y>
-         <width>480</width>
-         <height>531</height>
+         <width>433</width>
+         <height>498</height>
         </rect>
        </property>
       </widget>
@@ -87,11 +105,20 @@
           <height>41</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Segoe UI</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#f66a55;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
@@ -124,11 +151,20 @@ QPushbutton:pressed {
           <height>41</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Segoe UI</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#f2c44f;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
@@ -155,11 +191,20 @@ QPushbutton:pressed {
           <height>41</height>
          </size>
         </property>
+        <property name="font">
+         <font>
+          <family>Segoe UI</family>
+          <pointsize>10</pointsize>
+          <weight>75</weight>
+          <bold>true</bold>
+         </font>
+        </property>
         <property name="styleSheet">
          <string notr="true">QPushButton {
-	background-color: rgb(145, 182, 182);
+	background-color:#a0a5ff;
 	border-width: 2px;
 	border-radius: 15px;
+    color: white
 }
 
 QPushbutton:pressed {
